--- a/Customer_Churn.ipynb
+++ b/Customer_Churn.ipynb
@@ -38,35 +38,35 @@
         "\n",
         "#Exploratory Data Analysis\n",
         "cat_df = df.select_dtypes(include=['object']).copy()   #Copying columns with data type object\n",
-        "#cat_df.head()\n",
-        "#print(cat_df.isnull().values.sum())      #checking the count of null values\n",
-        "#print(cat_df['gender'].value_counts())  #checking the distribution of values for each category in a column\n",
-        "#print(cat_df['Partner'].value_counts())\n",
-        "#print(cat_df['Dependents'].value_counts())\n",
-        "#print(cat_df['PhoneService'].value_counts())\n",
-        "#print(cat_df['MultipleLines'].value_counts())\n",
-        "#print(cat_df['InternetService'].value_counts())\n",
-        "#print(cat_df['OnlineSecurity'].value_counts())\n",
-        "#print(cat_df['OnlineBackup'].value_counts())\n",
-        "#print(cat_df['DeviceProtection'].value_counts())\n",
-        "#print(cat_df['TechSupport'].value_counts())\n",
-        "#print(cat_df['StreamingTV'].value_counts())\n",
-        "#print(cat_df['StreamingMovies'].value_counts())\n",
-        "#print(cat_df['Contract'].value_counts())\n",
-        "#print(cat_df['PaperlessBilling'].value_counts())\n",
-        "#print(cat_df['PaymentMethod'].value_counts())\n",
-        "#print(cat_df['TotalCharges'].value_counts())\n",
-        "#print(cat_df['Churn'].value_counts())\n",
-        "#print(cat_df['Partner'].value_counts().count()) #counting the number of categories in a column\n",
+        "cat_df.head()\n",
+        "print(cat_df.isnull().values.sum())      #checking the count of null values\n",
+        "print(cat_df['gender'].value_counts())  #checking the distribution of values for each category in a column\n",
+        "print(cat_df['Partner'].value_counts())\n",
+        "print(cat_df['Dependents'].value_counts())\n",
+        "print(cat_df['PhoneService'].value_counts())\n",
+        "print(cat_df['MultipleLines'].value_counts())\n",
+        "print(cat_df['InternetService'].value_counts())\n",
+        "print(cat_df['OnlineSecurity'].value_counts())\n",
+        "print(cat_df['OnlineBackup'].value_counts())\n",
+        "print(cat_df['DeviceProtection'].value_counts())\n",
+        "print(cat_df['TechSupport'].value_counts())\n",
+        "print(cat_df['StreamingTV'].value_counts())\n",
+        "print(cat_df['StreamingMovies'].value_counts())\n",
+        "print(cat_df['Contract'].value_counts())\n",
+        "print(cat_df['PaperlessBilling'].value_counts())\n",
+        "print(cat_df['PaymentMethod'].value_counts())\n",
+        "print(cat_df['TotalCharges'].value_counts())\n",
+        "print(cat_df['Churn'].value_counts())\n",
+        "print(cat_df['Partner'].value_counts().count()) #counting the number of categories in a column\n",
         "\n",
         "\n",
-        "#cat_count = cat_df['PaymentMethod'].value_counts()\n",
-        "#sns.set(style=\"darkgrid\")\n",
-        "#sns.barplot(cat_count.index, cat_count.values, alpha=0.9)\n",
-        "#plt.title('Frequency Distribution of Carriers')\n",
-        "#plt.ylabel('Number of Occurrences', fontsize=12)\n",
-        "#plt.xlabel('Category', fontsize=12)\n",
-        "#plt.show()\n",
+        "cat_count = cat_df['PaymentMethod'].value_counts()\n",
+        "sns.set(style=\"darkgrid\")\n",
+        "sns.barplot(cat_count.index, cat_count.values, alpha=0.9)\n",
+        "plt.title('Frequency Distribution of Carriers')\n",
+        "plt.ylabel('Number of Occurrences', fontsize=12)\n",
+        "plt.xlabel('Category', fontsize=12)\n",
+        "plt.show()\n",
         "\n",
         "#Encoding Categorical Data\n",
         "replace_map_comp1 = {'InternetService': {'Fiber optic': 1, 'DSL': 2, 'No': 3}}\n",
